--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div id="container">
-        This is the main content of the container.
-    </div>
+   <div id="container">
+    This is the main container element.
+</div>
 </body>
 
 </html>
